--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -15,7 +15,7 @@ header.main-header
 				img(src="/images/logo.svg", alt="")
 			a.logo.logo-red(href="#") 
 				img(src="/images/logo-red.svg", alt="")
-		.col-9.vertical-align
+		.col-9.vertical-align.hidden-md.hidden-sm.hidden-xs
 			nav.nav-header
 				ul.ln
 						li 
@@ -34,6 +34,8 @@ header.main-header
 							a.btn.btn--red(href="#") Стать дилером
 						li 
 							a(href="#")  Контакты
-
-
+	
+		.col-9.header-tablet-nav
+			a.btn.btn--red(href="#") Стать дилером
+			.hamburger-btn
 
