--- a/pug/default/head.pug
+++ b/pug/default/head.pug
@@ -12,7 +12,7 @@ head
 	//- link(href="/css/air-datepicker.css"	type="text/css"	rel="stylesheet")
 	link(href="/css/lightbox.css"	type="text/css"	rel="stylesheet")
 	link(href="/fonts/stylesheet.css"	type="text/css"	rel="stylesheet")
-	link(href="/style.css"	type="text/css"	rel="stylesheet")
+	link(href="/style-theme.css"	type="text/css"	rel="stylesheet")
 
 
 	script(	src='/js/jquery-3.6.0.min.js' defer)
