--- a/pug/pages/recycling.pug
+++ b/pug/pages/recycling.pug
@@ -35,7 +35,13 @@ include ../default/build-header
 					b 100%
 					div Возможность добавления до 100% горячего рециклингового асфальта.
 				.recycling-scale-line
-		.recycling-slider-container
+		.recycling-slider-container.slider-container
+			.main-full
+				.num-slider 
+					.current
+						ul.ln.num-box 
+					span /
+					.total 1
 			.recycling-slider
 				-for(x=0;x<=4;x++)
 					.recycling-slider-item
