--- a/scss/sourse/pages/_recycling.sass
+++ b/scss/sourse/pages/_recycling.sass
@@ -70,6 +70,13 @@
   overflow: hidden
   // max-width: 1280px
   // margin: 0 auto
+  .main-full
+    position: relative
+  .num-slider
+    top: 13px
+    color: $blackColor
+    left: auto
+    right: 50px
   .lSSlideOuter
     overflow: visible
     padding-top: 45px
@@ -81,7 +88,7 @@
     display: none
   .lSAction
     left: auto
-    @include positionElement(130px,1px,0, -30px,right)
+    @include positionElement(150px,1px,0, -30px,right)
   .lSPrev
     left: 0
     @include bgImageEl("../images/arrows/arrow-left-black.svg")
