--- a/scss/style.sass
+++ b/scss/style.sass
@@ -67,6 +67,8 @@
 
 @import "sourse/default/forms/_search.sass"
 
+@import "sourse/default/forms/_wp.sass"
+
 /*-----forms-end----*/
 
 /*-----blocks-start----*/
