--- a/pug/pages/home/about.pug
+++ b/pug/pages/home/about.pug
@@ -8,50 +8,58 @@ section
 			| Компания Мерко Руссланд специализируется на строительстве асфальтобетонных заводов и поставке высокотехнологического оборудования и транспорта по обеспечению бесперебойного производства асфальта.
 		p
 			| Мы занимаемся поставкой оборудования для производства бетона, растворобетонных и асфальтобетонных смесей, осуществляя профессиональную поддержку по производству продукции высокого качества и обеспечению бесперебойной работы оборудования, используемого в производственном процессе.
-	.about-slider
-		.main-grid
-			.col-4
-				.about-item.about-item-main
-					.img-cover
-						img(src="/images/temp/z1.jpg", alt="")
-					.about-item-num 
-						span 1
-			.col-8
-				.about-item.about-item-info 
-					.info-cell
-						h3 SLB1500X8
-						div Тип установки
-					.info-cell
-						h3 130-150 т/ч
-						div Производительность 
-					.info-cell
-						h3 40 м
-							sup 3
-						div Бункер горячих минералов
-					.info-cell
-						a.more-btn--black(href="#") 
-							i 
-							span Подробнее
-			.col-4
-				.about-item.about-item-price
-					h3 150 млн. руб
-					div Средняя стоимость
-					.btn-container 
-						a.more-btn--white(href="#") 
-							i
-							span Забронировать
-			.col-4
-				.about-item.about-item-next
-					h3 SLB2000C8
-					div 120-160 тонн/час 42 м
-						sup 3
-					.btn-container 
-						a.more-btn--gray(href="#") 
-							i
-							span Следующий завод
-			.col-4
-				.about-item.about-item-preview
-					.img-cover
-						img(src="/images/temp/z2.jpg", alt="")
-					.about-item-num 
-						span 2
+	.about-slider-container.slider-container
+		.main-full 
+			.num-slider 
+				.current
+					ul.ln.num-box 
+				span /
+				.total 1
+		.about-slider
+			-for(i=0;i<4;i++)
+				.about-slider-item.main-grid
+					.col-4
+						.about-item.about-item-main
+							.img-cover
+								img(src="/images/temp/z1.jpg", alt="")
+							.about-item-num 
+								span 1
+					.col-8
+						.about-item.about-item-info 
+							.info-cell
+								h3 SLB1500X8
+								div Тип установки
+							.info-cell
+								h3 130-150 т/ч
+								div Производительность 
+							.info-cell
+								h3 40 м
+									sup 3
+								div Бункер горячих минералов
+							.info-cell
+								a.more-btn--black(href="#") 
+									i 
+									span Подробнее
+					.col-4
+						.about-item.about-item-price
+							h3 150 млн. руб
+							div Средняя стоимость
+							.btn-container 
+								a.more-btn--white(href="#") 
+									i
+									span Забронировать
+					.col-4
+						.about-item.about-item-next
+							h3 SLB2000C8
+							div 120-160 тонн/час 42 м
+								sup 3
+							.btn-container 
+								a.more-btn--gray(href="#") 
+									i
+									span Следующий завод
+					.col-4
+						.about-item.about-item-preview
+							.img-cover
+								img(src="/images/temp/z2.jpg", alt="")
+							.about-item-num 
+								span 2
