--- a/pug/pages/home/main.pug
+++ b/pug/pages/home/main.pug
@@ -1,34 +1,57 @@
-.main-home
+.main-home.slider-container
 	.main-home-img.img-cover
 		img(src="/images/main-bg.jpg", alt="")
 	.main-home-gradient
-	.num-slider 
-		.current
-			ul.ln.num-box 
-
-		span /
-		.total 1
+	.main-full
+		.num-slider 
+			.current
+				ul.ln.num-box 
+			span /
+			.total 1
+		.main-scroll-down
+			i
 	.main-home-slider.main-slider
 		.home-slider-item
 			.main-grid
-				.col-7.col-offset-3
-					h2 Асфальтобетонные заводы SANY
-					h3 1 Производительностью от 80 до 450 тонн/час
+				.col-7.col-offset-3.col-offset-md-1
+					h2
+						em 
+							span(style="transition-delay:0.25s") Асфальтобетонные 
+						em
+							span(style="transition-delay:0.5s") заводы SANY
+					h3
+						em
+							span(style="transition-delay:0.75s") 1 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
 				.col-7.col-offset-3
-					h2 Асфальтобетонные заводы SANY
-					h3 2 Производительностью от 80 до 450 тонн/час
+					h2
+						em 
+							span(style="transition-delay:0.25s") Асфальтобетонные 
+						em
+							span(style="transition-delay:0.5s") заводы SANY
+					h3
+						em
+							span(style="transition-delay:0.75s") 2 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
 				.col-7.col-offset-3
-					h2 Асфальтобетонные заводы SANY
-					h3 3 Производительностью от 80 до 450 тонн/час
+					h2
+						em 
+							span(style="transition-delay:0.25s") Асфальтобетонные 
+						em
+							span(style="transition-delay:0.5s") заводы SANY
+					h3
+						em
+							span(style="transition-delay:0.75s") 3 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
 				.col-7.col-offset-3
-					h2 Асфальтобетонные заводы SANY
-					h3 4 Производительностью от 80 до 450 тонн/час
-	.main-full
-		.main-scroll-down
-			i
+					h2
+						em 
+							span(style="transition-delay:0.25s") Асфальтобетонные 
+						em
+							span(style="transition-delay:0.5s") заводы SANY
+					h3
+						em
+							span(style="transition-delay:0.75s") 4 Производительностью от 80 до 450 тонн/час
