--- a/pug/blocks/footer.pug
+++ b/pug/blocks/footer.pug
@@ -1,13 +1,13 @@
 footer
 	.main-grid
-		.col-3
+		.col-3.col-sm-6
 			.nav.nav-second
 				ul
 					each val in ["О компании","Сервис и запасные части","Проекты","Вакансии","Документы","Контакты"]
 						li  
 							a(href="#") 
 								= val
-		.col-3
+		.col-3.col-sm-6
 			.nav
 				h3 
 					a(href="#")  Продукция
@@ -18,7 +18,7 @@ footer
 								= val
 		
 
-		.col-3
+		.col-3.col-sm-6
 			.feedback-footer-item 
 				span Официальный представитель Производственная компания "Дорожные технологии" 
 				b B 192148, г. Санкт-Петербург, ул. Седова, д. 13
@@ -29,7 +29,7 @@ footer
 				span Почта:
 				a(href="#") info@pk-dorteh.ru
 
-		.col-3.feedback
+		.col-3.col-sm-6.feedback
 			a.logo(href="./index.html")
 				img(src="/images/logo-black.svg", alt="")
 			.feedback-footer-item
