--- a/pug/pages/home/advantages.pug
+++ b/pug/pages/home/advantages.pug
@@ -5,19 +5,22 @@ section.advantages
 				br
 				| асфальтобетонных заводов от компании Мерко Руссланд:
 		.col-4 
-			.advantages-box
+			.advantages-box.advantages-box-desktop
 				.advantages-bg
 				h2 Поддержка
-	.main-grid
-		.col-4
+	.advantages-grid.main-grid
+		.advantages-cell.advantages-cell-1
 			+advantagesItem('Строим как стационарные, как и мобильные асфальтобетонные заводы','/images/temp/adv/1.svg')
-		.col-4
+		.advantages-cell.advantages-cell-2
 			+advantagesItem('Поставляем только высокопроизводительное оборудование','/images/temp/adv/2.svg')
-		.col-4
+		.advantages-cell.advantages-cell-3
 			+advantagesItem('Любое дополнительное оборудование и запасные части в наличии','/images/temp/adv/3.svg', true)
-		.col-4
+		.advantages-cell.advantages-cell-4
 			+advantagesItem('Оборудование только от проверенных поставщиков','/images/temp/adv/4.svg')
-		.col-4
+			.advantages-box.advantages-box-mobile
+				.advantages-bg
+				h2 Поддержка
+		.advantages-cell.advantages-cell-5
 			+advantagesItem('Осуществляем техническую и сервисную поддержку','/images/temp/adv/5.svg')
-		.col-4
+		.advantages-cell.advantages-cell-6
 			+advantagesItem('Осуществляем техническую и сервисную поддержку','/images/temp/adv/6.svg', true)
