--- a/pug/pages/home/products-6.pug
+++ b/pug/pages/home/products-6.pug
@@ -11,7 +11,7 @@ section
 					span Подробнее
 	.main-grid
 		-for(var x = 0; x < 1; x++)
-			.col-3
+			.col-3.col-sm-6
 				+productItem("Бетоносмесительные установки HZS60G","150 млн. руб.","6.jpg")
 		.col-6 
 			.product-catalog-info
