--- a/pug/pages/home/products-7.pug
+++ b/pug/pages/home/products-7.pug
@@ -11,5 +11,5 @@ section
 					span Подробнее
 	.main-grid
 		-for(var x = 0; x < 4; x++)
-			.col-3
+			.col-3.col-sm-6
 				+productItem("Бетоносмесительные установки HZS60G","150 млн. руб.","7.jpg")
