--- a/scss/sourse/blocks/_header.sass
+++ b/scss/sourse/blocks/_header.sass
@@ -120,9 +120,13 @@ header
     margin-left: 30px
 .header-tablet-nav
   display: none
-@media (max-width: 998px)
+@media (max-width: 992px)
   .header-tablet-nav
     display: block
     text-align: right
     .btn
       margin-right: 30px
+@media (max-width: 820px)
+  .logo
+    img
+      width: 160px
