--- a/scss/sourse/pages/home/_advantages.sass
+++ b/scss/sourse/pages/home/_advantages.sass
@@ -2,6 +2,7 @@
   // width: 260px
   margin: 0 0 30px
   position: relative
+  z-index: 1
   // text-transform: uppercase
   transition: ease-out 0.5s
   padding: 15px
@@ -39,3 +40,39 @@
   @include positionElement(calc(100% + 60px),720px,-30px, 80px)
   background-color: $redColor
   border-radius: 0 30px 0 30px
+.advantages-grid
+  grid-template-rows: repeat(2, 1fr)
+.advantages-cell
+  grid-column: span 4
+.advantages-box-mobile
+  display: none
+@media (max-width: 820px)
+  .advantages-box-desktop
+    display: none
+  .advantages-cell
+    grid-column: span 6
+    position: relative
+  .advantages-cell-4
+    grid-row: 2/ span 1
+  .advantages-cell-5
+    grid-row: 2/ span 1
+  .advantages-bg
+    width: 100%
+    height: 100%
+    left: 0
+    top: 0
+  .advantages-box-mobile
+    display: block
+    grid-column: span 12
+    position: absolute
+    left: 0
+    width: calc( 200% + 30px )
+    height: calc(100% + 40px)
+    margin-top: -20px
+  .advantages-box
+    h2
+      font-size: 32px
+      padding: 15px
+  .advantages-item
+    h3
+      font-size: 14px
