--- a/pug/pages/home/products.pug
+++ b/pug/pages/home/products.pug
@@ -11,5 +11,5 @@ section
 					span Подробнее
 	.main-grid
 		-for(var x = 0; x < 4; x++)
-			.col-3
+			.col-3.col-sm-6
 				+productItem("Грунтосмесительная установка WCZ400","150 млн. руб.","1.jpg")
