--- a/scss/sourse/default/forms/_default.sass
+++ b/scss/sourse/default/forms/_default.sass
@@ -58,3 +58,8 @@ input
 	text-align: right
 	.wpcf7-acceptance
 		display: inline-block
+@media (max-width: 820px)
+	.input-box
+		label
+			font-size: 16px
+			margin-bottom: 8px
