--- a/style-theme.css
+++ b/style-theme.css
@@ -1710,6 +1710,12 @@ input {
   display: inline-block;
 }
 
+@media (max-width: 820px) {
+  .input-box label {
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
+}
 .input-animate {
   position: relative;
   padding-top: 30px;
@@ -2730,13 +2736,18 @@ header.show .mail-btn:hover i {
   display: none;
 }
 
-@media (max-width: 998px) {
+@media (max-width: 992px) {
   .header-tablet-nav {
     display: block;
     text-align: right;
   }
   .header-tablet-nav .btn {
     margin-right: 30px;
+  }
+}
+@media (max-width: 820px) {
+  .logo img {
+    width: 160px;
   }
 }
 footer {
@@ -3671,6 +3682,7 @@ footer h3 a {
 .advantages-item {
   margin: 0 0 30px;
   position: relative;
+  z-index: 1;
   -webkit-transition: ease-out 0.5s;
   transition: ease-out 0.5s;
   padding: 15px;
@@ -3736,6 +3748,63 @@ footer h3 a {
   border-radius: 0 30px 0 30px;
 }
 
+.advantages-grid {
+  -ms-grid-rows: (1fr)[2];
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.advantages-cell {
+  -ms-grid-column-span: 4;
+  grid-column: span 4;
+}
+
+.advantages-box-mobile {
+  display: none;
+}
+
+@media (max-width: 820px) {
+  .advantages-box-desktop {
+    display: none;
+  }
+  .advantages-cell {
+    -ms-grid-column-span: 6;
+    grid-column: span 6;
+    position: relative;
+  }
+  .advantages-cell-4 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/span 1;
+  }
+  .advantages-cell-5 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/span 1;
+  }
+  .advantages-bg {
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+  }
+  .advantages-box-mobile {
+    display: block;
+    -ms-grid-column-span: 12;
+    grid-column: span 12;
+    position: absolute;
+    left: 0;
+    width: calc(200% + 30px);
+    height: calc(100% + 40px);
+    margin-top: -20px;
+  }
+  .advantages-box h2 {
+    font-size: 32px;
+    padding: 15px;
+  }
+  .advantages-item h3 {
+    font-size: 14px;
+  }
+}
 .feedback .main-grid {
   gap: 0 30px;
 }
@@ -3890,10 +3959,6 @@ footer h3 a {
 .about-item-info sup {
   margin-top: -10px;
   display: inline-block;
-}
-.about-item-info .more-btn--black span {
-  display: block;
-  margin-top: 10px;
 }
 
 .about-item-price {
