--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -1,7 +1,7 @@
 //- include preload.pug
 header.main-header
 	.main-grid
-		.col-12
+		.col-12.hidden-xs
 			.vertical-align
 				.feedback-header
 						a.phone-btn(href="#") 
