--- a/pug/blocks/popup/menu.pug
+++ b/pug/blocks/popup/menu.pug
@@ -1,48 +1,38 @@
 +popup-template(0, 'menu-hamburger')
-.menu-mobile
-	nav.popup-nav
-		ul.ln
-				li 
-					a(href="#") Аренда яхт и катеров
-						i 
-				li 
-					a(href="#") МАРШРУТЫ
-				li 
-					a(href="#") wake Dubai
-				li 
-					a(href="#") Дополнительные услуги
+	.menu-mobile
+		.menu-header
+			a.logo(href="#") 
+				img(src="/images/logo-red.svg", alt="")
+		nav.popup-nav
+			ul.ln
+					li 
+						a(href="#") Заводы у установки
+					li 
+						a(href="#") Техника
+					li 
+						a(href="#") Проекты
 						i
-				li 
-					a(href="#") о компании
-						i
-					ul 
-						li 
-							a.back-link(href="#") о компании
-								i
-						li 
-							a(href="#") О нас 
-						li 
-							a(href="#") Блог
-						li 
-							a(href="#") О нас 
-						li 
-							a(href="#") Блог
-				li 
-					a(href="#") отзывы
-				li 
-					a(href="#") контакты
-	.search-main 
-		input.input-search(type="text" placeholder="Поиск")
-		.search-ico
-	.menu-footer
-		.menu-footer-item 
-			a.phone-btn(href="#") 
-				i
-				span + 971 56 115 16 24
-		.menu-footer-item
-			a.btn-header.btn.btn--yellow.element-btn(data-element="1" href="#") Перезвонить мне
-		.menu-footer-item.social-default
-			a.whatsapp-btn(href="") 
-				i 
-				span WhatsApp
-			+social(["fc","i"])
+						ul 
+							li 
+								a(href="#") Проект 1
+							li 
+								a(href="#") Проект 2
+							li 
+								a(href="#") Проект 3
+							li 
+								a(href="#") Проект 4
+					li 
+						a(href="#") Стать дилером
+					li 
+						a(href="#") Контакты
+		.menu-footer
+			.menu-footer-item 
+				a.phone-btn(href="#") 
+					i
+					span +7 (495) 969 58 69
+			.menu-footer-item 
+				a.mail-btn(href="#") 
+					i
+					span dds@merko-russland.com
+
+
