--- a/pug/default/build-header.pug
+++ b/pug/default/build-header.pug
@@ -4,9 +4,5 @@ html
 	include head.pug 
 	// head end
 	include ../components/connect-mixins.pug  
+	include ../blocks/popup/menu.pug
 	body 
-		// popup-menu end 
-  
-		// header start
-		//include ../blocks/header.pug
-		// header end
