--- a/pug/pages/home/feedback.pug
+++ b/pug/pages/home/feedback.pug
@@ -4,34 +4,34 @@ section.feedback
 				| Запрос коммерческого предложения 
 			div Если вам требуется консультация по любому типу оборудования, представленного на сайте, или вы хотите получить индивидуальное коммерческое предложение, то, пожалуйста, заполните данную форму, и наши специалисты в кратчайшие сроки свяжутся с вами. 
 	.main-grid
-		.col-6 
+		.col-6.col-xs-12 
 			.input-box
 				label Ваше имя:*
 				+inputText('Введите имя','require')
-		.col-6 
+		.col-6.col-xs-12 
 			.input-box
 				label Ваша должность:
 				+inputText('Введите должность','require')
-		.col-6 
+		.col-6.col-xs-12 
 			.input-box
 				label Ваш телефон:*
 				+inputPhone(' +7 000 000 - 00 – 00 ', 'require')
-		.col-6 
+		.col-6.col-xs-12 
 			.input-box
 				label Интересующий вас товар или услуга:
 				+inputText('Введите наименование',)
-		.col-6 
+		.col-6.col-xs-12 
 			.input-box
 				label Email:*
 				+inputEmail('Введите email') 
 			.input-box
 				label Наименование организации:
 				+inputText('Введите наименование организации')
-		.col-6 
+		.col-6.col-xs-12 
 			.input-box
 				label Дополнительные комментарии:
 				+inputTextarea('Введите дополнительные комментарии')
-		.col-12 
+		.col-12.col-xs-12 
 			.input-box
 				.checkbox.agreement
 					label Согласен(на) на обработку 
