--- a/pug/pages/home/products-6.pug
+++ b/pug/pages/home/products-6.pug
@@ -1,19 +1,19 @@
 section
 	.head-section.main-grid
-		.col-8
+		.col-8.col-xs-12
 			h2
 				| Дробильно-сортировочные комплексы 
 			div Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in 
-		.col-4
+		.col-4.col-xs-12
 			.btn-container
 				a(href="#").more-btn--black
 					i 
 					span Подробнее
 	.main-grid
 		-for(var x = 0; x < 1; x++)
-			.col-3.col-sm-6
+			.col-3.col-sm-6.col-xs-12
 				+productItem("Бетоносмесительные установки HZS60G","150 млн. руб.","6.jpg")
-		.col-6 
+		.col-6.col-xs-12 
 			.product-catalog-info
 				h4 
 					| Варианты применения:
