--- a/scss/sourse/pages/home/_about.sass
+++ b/scss/sourse/pages/home/_about.sass
@@ -84,3 +84,24 @@
   border-radius: 0 40px 0 0
   .about-item-num
     background-color: $grayColorSecond
+@media (max-width: 576px)
+  .about-item-price-cell
+    grid-column: 7/span 6
+    grid-row: 1
+  .about-slider-item
+    gap: 8px
+  .about-item
+    padding: 15px
+    height: 150px
+    gap: 0
+    font-size: 12px
+    h3
+      font-size: 21px
+    .info-cell
+
+  .about-item-num
+    width: 50px
+    height: 50px
+    border-radius: 0 20px 0 0
+    span
+      font-size: 24px
