--- a/pug/pages/home/about.pug
+++ b/pug/pages/home/about.pug
@@ -18,13 +18,13 @@ section
 		.about-slider
 			-for(i=0;i<4;i++)
 				.about-slider-item.main-grid
-					.col-4
+					.col-4.col-xs-6
 						.about-item.about-item-main
 							.img-cover
 								img(src="/images/temp/z1.jpg", alt="")
 							.about-item-num 
 								span 1
-					.col-8
+					.col-8.col-xs-12
 						.about-item.about-item-info 
 							.info-cell
 								h3 SLB1500X8
@@ -40,7 +40,7 @@ section
 								a.more-btn--black(href="#") 
 									i 
 									span Подробнее
-					.col-4
+					.col-4.col-xs-6.about-item-price-cell
 						.about-item.about-item-price
 							h3 150 млн. руб
 							div Средняя стоимость
@@ -48,7 +48,7 @@ section
 								a.more-btn--white(href="#") 
 									i
 									span Забронировать
-					.col-4
+					.col-4.col-xs-6
 						.about-item.about-item-next
 							h3 SLB2000C8
 							div 120-160 тонн/час 42 м
@@ -57,7 +57,7 @@ section
 								a.more-btn--gray(href="#") 
 									i
 									span Следующий завод
-					.col-4
+					.col-4.col-xs-6
 						.about-item.about-item-preview
 							.img-cover
 								img(src="/images/temp/z2.jpg", alt="")
