--- a/pug/pages/home/main.pug
+++ b/pug/pages/home/main.pug
@@ -13,7 +13,7 @@
 	.main-home-slider.main-slider
 		.home-slider-item
 			.main-grid
-				.col-7.col-offset-3.col-offset-md-1
+				.col-7.col-xs-12.col-offset-3.col-offset-md-1
 					h2
 						em 
 							span(style="transition-delay:0.25s") Асфальтобетонные 
@@ -24,7 +24,7 @@
 							span(style="transition-delay:0.75s") 1 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
-				.col-7.col-offset-3
+				.col-7.col-xs-12.col-offset-3.col-offset-md-1
 					h2
 						em 
 							span(style="transition-delay:0.25s") Асфальтобетонные 
@@ -35,7 +35,7 @@
 							span(style="transition-delay:0.75s") 2 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
-				.col-7.col-offset-3
+				.col-7.col-xs-12.col-offset-3.col-offset-md-1
 					h2
 						em 
 							span(style="transition-delay:0.25s") Асфальтобетонные 
@@ -46,7 +46,7 @@
 							span(style="transition-delay:0.75s") 3 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
-				.col-7.col-offset-3
+				.col-7.col-xs-12.col-offset-3.col-offset-md-1
 					h2
 						em 
 							span(style="transition-delay:0.25s") Асфальтобетонные 
