--- a/scss/sourse/blocks/_header.sass
+++ b/scss/sourse/blocks/_header.sass
@@ -130,3 +130,8 @@ header
   .logo
     img
       width: 160px
+@media (max-width: 576px)
+  header
+    padding: 45px 0 15px
+    .btn
+      display: none
