--- a/scss/sourse/blocks/popup/_menu.sass
+++ b/scss/sourse/blocks/popup/_menu.sass
@@ -1,7 +1,27 @@
+.hamburger-btn
+	&.active
+		background-image: url("../images/icons/close-gray.svg")
+		&:hover
+			background-image: url("../images/icons/close-yellow.svg")
+.popup-nav
+	.close-btn
+		background-image: url("../images/icons/close-gray.svg")
+.menu-mobile
+	display: flex
+	justify-content: space-between
+	flex-direction: column
+	height: 100%
 .menu-hamburger
+	top: 0px
+	height: 100vh
+	overflow: hidden
+	left: 100%
+	transition: ease-out 0.5s
+	&.show
+		left: 0
 	.popup-container
 		background-color: $whiteColor
-		width: 50%
+		width: 100%
 		height: 100%
 		max-width: 460px
 		margin: 0
@@ -10,17 +30,39 @@
 		display: flex
 		flex-direction: column
 		border-radius: 0px
-		padding: 45px 30px 60px
+		// padding: 45px 15px 60px
+		padding: 0
 		overflow-y: auto
-	.social
-		margin-bottom: 30px
-.popup-nav
-	margin-bottom: 45px
+		font-size: 24px
+
 	li
-		margin-bottom: 15px
+		padding: 24px 0
+		border-bottom: 1px solid $grayColor
+		position: relative
+		i
+			@include positionElement(30px,30px,0, 50%, right)
+			@include bgImageEl("../images/arrows/carret-down-black.svg")
+			margin-top: -15px
+		ul
+			display: none
+.menu-footer
+	// @include positionElement(100%,auto,0,0,left, bottom)
+	background-color: $redColor
+	color: $whiteColor
+	padding: 25px 15px
+	border-radius: 0 50px 0 0
+.menu-footer-item
+	margin-bottom: 8px
+	.mail-btn
+		font-size: $standartSize
+.menu-header,
+.popup-nav
+	padding: 45px 15px 60px
+.popup-nav
+
 	a
-		font-size: $largeSize
-		color: $blueColor
+		position: relative
+		color: $blackColor
 		text-decoration: none
 		&:hover
-			color: $goldColor
+			color: $redColor
