--- a/scss/sourse/pages/home/_advantages.sass
+++ b/scss/sourse/pages/home/_advantages.sass
@@ -15,6 +15,7 @@
     font-size: 20px
     font-weight: 500
     margin: 0 0 30px
+    word-wrap: break-word
   &.extra
     color: $whiteColor
     i
@@ -76,3 +77,15 @@
   .advantages-item
     h3
       font-size: 14px
+@media (max-width: 576px)
+  .advantages-box
+    h2
+      font-size: 24px
+  .advantages-item
+    padding: 8px
+    img
+      width: 40px
+      height: 40px
+  .advantages-item-text i
+    width: 30px
+    height: 30px
