--- a/scss/sourse/pages/home/_main.sass
+++ b/scss/sourse/pages/home/_main.sass
@@ -92,3 +92,10 @@
   .main-home
     h2
       font-size: 48px
+@media (max-width: 576px)
+  .main-home
+    h2
+      font-size: 32px
+      margin-bottom: 15px
+    h3
+      font-size: 14px
