--- a/style-theme.css
+++ b/style-theme.css
@@ -274,6 +274,11 @@ section {
   height: 75px;
 }
 
+@media (max-width: 576px) {
+  .head-section h2 {
+    font-size: 24px;
+  }
+}
 /*-----default-content-end----*/
 /*-----elements-start----*/
 .tag {
@@ -545,8 +550,8 @@ section {
 .close-btn {
   display: inline-block;
   vertical-align: middle;
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -560,8 +565,8 @@ section {
 .hamburger-btn {
   display: inline-block;
   vertical-align: middle;
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
   background-position: center right;
   background-repeat: no-repeat;
   background-size: contain;
@@ -668,36 +673,6 @@ section {
   background-image: url("../images/icons/more-red.svg");
 }
 
-.link-next {
-  border-color: #202020;
-  text-decoration: none;
-}
-.link-next i, .link-next span {
-  display: inline-block;
-  vertical-align: middle;
-}
-.link-next i {
-  margin-right: 8px;
-  display: inline-block;
-  vertical-align: middle;
-  width: 30px;
-  height: 30px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-image: url("../images/arrows/arrow-right-black.svg");
-}
-.link-next:hover {
-  color: #E52521;
-}
-.link-next:hover i {
-  background-image: url("../images/arrows/arrow-right-red.svg");
-}
-.link-next i {
-  margin-right: 0;
-  margin-left: 8px;
-}
-
 .more-btn--white {
   border-color: #202020;
   text-decoration: none;
@@ -753,6 +728,44 @@ section {
   background-image: url("../images/icons/more-red.svg");
 }
 
+.link-next {
+  border-color: #202020;
+  text-decoration: none;
+}
+.link-next i, .link-next span {
+  display: inline-block;
+  vertical-align: middle;
+}
+.link-next i {
+  margin-right: 8px;
+  display: inline-block;
+  vertical-align: middle;
+  width: 30px;
+  height: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url("../images/arrows/arrow-right-black.svg");
+}
+.link-next:hover {
+  color: #E52521;
+}
+.link-next:hover i {
+  background-image: url("../images/arrows/arrow-right-red.svg");
+}
+.link-next i {
+  margin-right: 0;
+  margin-left: 8px;
+}
+
+@media (max-width: 576px) {
+  .more-btn--white i,
+  .more-btn--gray i,
+  .more-btn--black i {
+    width: 30px;
+    height: 30px;
+  }
+}
 .spinner-container {
   position: relative;
   height: 30px;
@@ -2750,6 +2763,14 @@ header.show .mail-btn:hover i {
     width: 160px;
   }
 }
+@media (max-width: 576px) {
+  header {
+    padding: 45px 0 15px;
+  }
+  header .btn {
+    display: none;
+  }
+}
 footer {
   position: relative;
   background-color: #E52521;
@@ -2768,15 +2789,6 @@ footer a {
 }
 footer a:hover {
   color: #202020;
-}
-footer .footer-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  font-size: 14px;
 }
 footer .feedback {
   text-align: right;
@@ -2803,6 +2815,16 @@ footer h3 a {
   font-weight: 600;
 }
 
+.footer-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 14px;
+}
+
 .feedback-footer-item {
   margin: 0 0 15px;
 }
@@ -2813,6 +2835,42 @@ footer h3 a {
   font-weight: 700;
 }
 
+.footer-mobile {
+  display: none;
+}
+
+@media (max-width: 576px) {
+  footer {
+    font-size: 12px;
+  }
+  footer .nav {
+    font-size: inherit;
+  }
+  footer .main-grid {
+    gap: 0;
+    padding: 30px 15px 10px;
+  }
+  .footer-mobile {
+    display: block;
+  }
+  .footer-desktop {
+    display: none;
+  }
+  .footer-links {
+    display: block;
+    font-size: 10px;
+    margin-bottom: 10px;
+  }
+  .footer-delimetr {
+    width: calc(100% - 30px);
+    position: absolute;
+    height: 1px;
+    left: 15px;
+    top: auto;
+    margin-top: -15px;
+    background-color: #ffffff;
+  }
+}
 .map-home {
   height: 400px;
   position: relative;
@@ -3087,7 +3145,7 @@ footer h3 a {
 .close-btn--popup {
   position: absolute;
   right: 0;
-  top: 0;
+  top: 25px;
   margin: 15px;
 }
 
@@ -3109,9 +3167,45 @@ footer h3 a {
   font-size: 14px;
 }
 
+.hamburger-btn.active {
+  background-image: url("../images/icons/close-gray.svg");
+}
+.hamburger-btn.active:hover {
+  background-image: url("../images/icons/close-yellow.svg");
+}
+
+.popup-nav .close-btn {
+  background-image: url("../images/icons/close-gray.svg");
+}
+
+.menu-mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
+.menu-hamburger {
+  top: 0px;
+  height: 100vh;
+  overflow: hidden;
+  left: 100%;
+  -webkit-transition: ease-out 0.5s;
+  transition: ease-out 0.5s;
+}
+.menu-hamburger.show {
+  left: 0;
+}
 .menu-hamburger .popup-container {
   background-color: #ffffff;
-  width: 50%;
+  width: 100%;
   height: 100%;
   max-width: 460px;
   margin: 0;
@@ -3125,26 +3219,57 @@ footer h3 a {
       -ms-flex-direction: column;
           flex-direction: column;
   border-radius: 0px;
-  padding: 45px 30px 60px;
+  padding: 0;
   overflow-y: auto;
+  font-size: 24px;
 }
-.menu-hamburger .social {
-  margin-bottom: 30px;
+.menu-hamburger li {
+  padding: 24px 0;
+  border-bottom: 1px solid #C1C1C1;
+  position: relative;
+}
+.menu-hamburger li i {
+  width: 30px;
+  position: absolute;
+  height: 30px;
+  right: 0;
+  top: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url("../images/arrows/carret-down-black.svg");
+  margin-top: -15px;
+}
+.menu-hamburger li ul {
+  display: none;
 }
 
+.menu-footer {
+  background-color: #E52521;
+  color: #ffffff;
+  padding: 25px 15px;
+  border-radius: 0 50px 0 0;
+}
+
+.menu-footer-item {
+  margin-bottom: 8px;
+}
+.menu-footer-item .mail-btn {
+  font-size: 16px;
+}
+
+.menu-header,
 .popup-nav {
-  margin-bottom: 45px;
+  padding: 45px 15px 60px;
 }
-.popup-nav li {
-  margin-bottom: 15px;
-}
+
 .popup-nav a {
-  font-size: 24px;
-  color: #14143C;
+  position: relative;
+  color: #202020;
   text-decoration: none;
 }
 .popup-nav a:hover {
-  color: #C19F56;
+  color: #E52521;
 }
 
 /*-----blocks-start----*/ 
@@ -3656,6 +3781,15 @@ footer h3 a {
     font-size: 48px;
   }
 }
+@media (max-width: 576px) {
+  .main-home h2 {
+    font-size: 32px;
+    margin-bottom: 15px;
+  }
+  .main-home h3 {
+    font-size: 14px;
+  }
+}
 .banner {
   background-color: #14143C;
   color: #ffffff;
@@ -3697,6 +3831,7 @@ footer h3 a {
   font-size: 20px;
   font-weight: 500;
   margin: 0 0 30px;
+  word-wrap: break-word;
 }
 .advantages-item.extra {
   color: #ffffff;
@@ -3803,6 +3938,22 @@ footer h3 a {
   }
   .advantages-item h3 {
     font-size: 14px;
+  }
+}
+@media (max-width: 576px) {
+  .advantages-box h2 {
+    font-size: 24px;
+  }
+  .advantages-item {
+    padding: 8px;
+  }
+  .advantages-item img {
+    width: 40px;
+    height: 40px;
+  }
+  .advantages-item-text i {
+    width: 30px;
+    height: 30px;
   }
 }
 .feedback .main-grid {
@@ -3982,6 +4133,35 @@ footer h3 a {
   background-color: #9B9B9B;
 }
 
+@media (max-width: 576px) {
+  .about-item-price-cell {
+    -ms-grid-column: 7;
+    -ms-grid-column-span: 6;
+    grid-column: 7/span 6;
+    -ms-grid-row: 1;
+    grid-row: 1;
+  }
+  .about-slider-item {
+    gap: 8px;
+  }
+  .about-item {
+    padding: 15px;
+    height: 150px;
+    gap: 0;
+    font-size: 12px;
+  }
+  .about-item h3 {
+    font-size: 21px;
+  }
+  .about-item-num {
+    width: 50px;
+    height: 50px;
+    border-radius: 0 20px 0 0;
+  }
+  .about-item-num span {
+    font-size: 24px;
+  }
+}
 .faq-delimetr-container {
   position: relative;
 }
