--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -37,5 +37,5 @@ header.main-header
 	
 		.col-9.header-tablet-nav
 			a.btn.btn--red(href="#") Стать дилером
-			.hamburger-btn
+			.hamburger-btn.element-btn(data-element="0")
 
