--- a/scss/sourse/pages/_contacts.sass
+++ b/scss/sourse/pages/_contacts.sass
@@ -8,3 +8,10 @@
   h3
     font-size: 21px
     margin-bottom: 8px
+.page-contacts
+  h2
+    font-size: 24px
+.address-item
+  margin-bottom: 30px
+  img
+    width: 100%
