--- a/scss/sourse/blocks/_header.sass
+++ b/scss/sourse/blocks/_header.sass
@@ -12,8 +12,7 @@ header
   transition: ease-out 0.5s
   a
     text-decoration: none
-    &:hover
-      color: $redColor
+
   .btn
     padding: 6px 0
     font-size: $smallSize
@@ -64,7 +63,7 @@ header
     justify-content: space-between
     width: 100%
     font-weight: 500
-    font-size: $smallSize
+    // 
     list-style: none
     padding: 0
   li
@@ -78,7 +77,8 @@ header
       padding: 0
       width: 260px
       border: 1px solid $grayColorSecond
-      font-weight: 400
+      font-size: $smallSize
+      // font-weight: 400
       transition: ease-out 0.25s
       opacity: 0
       visibility: hidden
@@ -98,14 +98,17 @@ header
         transform: translateX(-50%) translateY(0)
   a
     position: relative
-    padding: 6px 0
-
+    padding: 6px 25px
+    &:hover
+      color: $redColor
+      background-color: $whiteColor
     i
-      @include positionElement(20px,20px, -4px, 50%,right)
-      transform: translateX(20px) translateY(-50%)
-      @include bgImageEl("../images/arrows/carret-down-white.svg", 34px)
+      @include positionElement(20px,20px, 0px, 50%,right)
+      transform: translateX(-3px) translateY(-50%)
+      @include bgImageEl("../images/arrows/carret-down-white.svg", 30px)
       &::before
         display: none
+  a
     &:hover
       i
         background-image: url("../images/arrows/carret-down-red.svg")
