--- a/scss/sourse/pages/product/_catalog.sass
+++ b/scss/sourse/pages/product/_catalog.sass
@@ -21,9 +21,11 @@
     border-radius: 40px 0 40px 0
     position: relative
     z-index: 1
-    padding: 15px 25px
+    padding: 0px 25px
     transition: ease-out 0.5s
-
+    height: 70px
+    display: flex
+    align-items: center
     a
 
       position: relative
@@ -49,13 +51,14 @@
   // background-color: $blueColor
   font-size: 0
   // transform: scale(1.01)
-  display: flex
-  flex-direction: column
+  // display: flex
+  // flex-direction: column
 
   .more-btn--white
     position: relative
     z-index: 1
-    margin: auto 15px 15px auto
+    margin: 0 0 0 15px
+    top: calc(100% - 140px)
 .product-item-cover
   @include positionElement(100%,100%,0,0)
   transition: ease-out 0.5s
