--- a/scss/sourse/pages/product/_detail.sass
+++ b/scss/sourse/pages/product/_detail.sass
@@ -81,6 +81,13 @@
     font-size: 21px
   .main-grid
     padding: 0
+.product-info-item
+  margin-bottom: 30px
+  h2
+    font-size: 16px
+    margin-bottom: 15px
+  .main-grid
+    gap: 0
 .product-description
   h3
     margin-bottom: 15px
